--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
 
   minio1:
     image: minio/minio:latest
+    command: server --address ":9001" --console-address ":9000" http://minio{1...2}/data
     restart: unless-stopped
     container_name: minio1
     hostname: minio1
